--- a/css/main.css
+++ b/css/main.css
@@ -621,4 +621,9 @@ footer{
     .tab1 p{
       font-size: 14px;
     }
+   .arrow-down {
+    width: 40px;
+    left: 46%;
+    margin-bottom: 25px;
+}
 }
